Fix text overflow on mobile

--- a/src/www/containers/userprofile/UserProfile.scss
+++ b/src/www/containers/userprofile/UserProfile.scss
@@ -284,6 +284,7 @@
           &,
           > img,
           > .UserPanel_btn-file {
+            font-size: 1rem;
             width: 8rem;
           }
         }
